<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodl_python</name>
  <version>0.1.0</version>
  <description>Implementation of the NoDL API in Python.</description>
  <maintainer email="ubuntu-robotics@lists.launchpad.net">Ubuntu Robotics</maintainer>
  <license>LGPLv3</license>

  <depend>rclpy</depend>

  <depend>ament_index_python</depend>
  <depend>python3-lxml</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
