<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2nodl</name>
  <version>0.0.1</version>
  <description>CLI tools for NoDL files.</description>
  <maintainer email="ubuntu-robotics@lists.launchpad.net">Ubuntu Robotics</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>argcomplete</depend>
  <depend>nodl_python</depend>
  <depend>ros2cli</depend>
  <depend>ros2pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
