<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2nodl</name>
  <version>0.3.1</version>
  <description>CLI tools for NoDL files.</description>
  <maintainer email="ubuntu-robotics@lists.launchpad.net">Ubuntu Robotics</maintainer>
  <license>Apache License 2.0</license>

  <depend>ament_index_python</depend>
  <depend>python3-argcomplete</depend>
  <depend>nodl_python</depend>
  <depend>ros2cli</depend>
  <depend>ros2pkg</depend>
  <depend>ros2run</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
